--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -41,31 +41,31 @@
     <hr>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'dark'" [icon]="'fa fa-line-chart'" [count]="12" [label]="'New task!'"></app-stat>
+            <app-stat [bgClass]="'dark'" [icon]="'fa fa-line-chart fa-fw'" [count]="12" [label]="'New task!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'warning'" [icon]="'fa fa-cutlery'" [count]="12" [label]="'New task!'"></app-stat>
+            <app-stat [bgClass]="'warning'" [icon]="'fa fa-cutlery fa-fw'" [count]="12" [label]="'New task!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'success'" [icon]="'fa fa-desktop'" [count]="124" [label]="'New Orders!'"></app-stat>
+            <app-stat [bgClass]="'success'" [icon]="'fa fa-desktop fa-fw'" [count]="124" [label]="'New Orders!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'danger'" [icon]="'fa fa-scissors'" [count]="13" [label]="'New Tickets!'"></app-stat>
+            <app-stat [bgClass]="'danger'" [icon]="'fa fa-scissors fa-fw'" [count]="13" [label]="'New Tickets!'"></app-stat>
         </div>
     </div>
     <br>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'dark'" [icon]="'fa fa-bolt'" [count]="12" [label]="'New task!'"></app-stat>
+            <app-stat [bgClass]="'dark'" [icon]="'fa fa-bolt fa-fw'" [count]="12" [label]="'New task!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'warning'" [icon]="'fa fa-microchip'" [count]="12" [label]="'New task!'"></app-stat>
+            <app-stat [bgClass]="'warning'" [icon]="'fa fa-microchip fa-fw'" [count]="12" [label]="'New task!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'success'" [icon]="'fa fa-map-signs'" [count]="124" [label]="'New Orders!'"></app-stat>
+            <app-stat [bgClass]="'success'" [icon]="'fa fa-map-signs fa-fw'" [count]="124" [label]="'New Orders!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'danger'" [icon]="'fa fa-bar-chart'" [count]="13" [label]="'New Tickets!'"></app-stat>
+            <app-stat [bgClass]="'danger'" [icon]="'fa fa-bar-chart fa-fw'" [count]="13" [label]="'New Tickets!'"></app-stat>
         </div>
     </div>
     <hr />
