--- a/client/src/app/CRUD/pagina/pagina.component.html
+++ b/client/src/app/CRUD/pagina/pagina.component.html
@@ -139,9 +139,13 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="esPrincipal" class="col-sm-4 col-form-label">Es Principal ?</label>
+          <label for="esPrincipal" class="col-sm-4 col-form-label">Es Principal?</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="esPrincipal" name="esPrincipal" placeholder="Es Principal ?" [(ngModel)]="entidadSeleccionada.esPrincipal">
+            <select class="form-control" id="esPrincipal" name="esPrincipal" [(ngModel)]="entidadSeleccionada.esprincipal">
+              <option value="-1" selected>Seleccione...</option>
+              <option value="1" selected>Si</option>
+              <option value="0" selected>No</option>
+            </select>
           </div>
         </div>
         <div class="form-group row">
