--- a/client/src/app/CRUD/comentario/comentario.component.html
+++ b/client/src/app/CRUD/comentario/comentario.component.html
@@ -102,16 +102,11 @@
       </div>
       <div class="modal-body">
          <form>
-         <div class="form-group row">
-            <label for="id" class="col-sm-4 col-form-label">Identificador</label>
-            <div class="col-sm-8">
-              <input type="text" readonly class="form-control" id="id" name="id" [(ngModel)]="entidadSeleccionada.id">
-            </div>
-         </div>
+         
          <div class="form-group row">
             <label for="fechaHora" class="col-sm-4 col-form-label">Fecha y Hora</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="fechaHora" name="fechaHora" placeholder="Fecha y Hora" [(ngModel)]="entidadSeleccionada.fechaHora">
+              <input type="date" class="form-control" id="fechaHora" name="fechaHora" placeholder="Fecha y Hora" [(ngModel)]="entidadSeleccionada.fechaHora">
             </div>
          </div>
          <div class="form-group row">
