--- a/client/src/app/CRUD/noticia/noticia.component.html
+++ b/client/src/app/CRUD/noticia/noticia.component.html
@@ -150,7 +150,7 @@
         <div class="form-group row">
           <label for="idFoto" class="col-sm-4 col-form-label">Imagen</label>
           <div class="col-sm-8">
-            <input type="file" class="form-control" id="imagen" placeholder="Imagen" #fileInput (change)="CodificarArchivo($event)" accept="image/*">
+            <input type="file" id="imagen" placeholder="Imagen" #fileInput (change)="CodificarArchivo($event)" accept="image/*">
           </div>
         </div>
         <div class="form-group row">
