--- a/client/src/app/CRUD/pagina/pagina.component.html
+++ b/client/src/app/CRUD/pagina/pagina.component.html
@@ -126,12 +126,7 @@
     </div>
     <div class="modal-body">
       <form>
-        <div class="form-group row">
-          <label for="id" class="col-sm-4 col-form-label">Identificador</label>
-          <div class="col-sm-8">
-            <input type="text" readonly class="form-control" id="id" name="id" [(ngModel)]="entidadSeleccionada.id">
-          </div>
-        </div>
+       
         <div class="form-group row">
           <label for="slider" class="col-sm-4 col-form-label">Slider</label>
           <div class="col-sm-8">
@@ -141,7 +136,7 @@
         <div class="form-group row">
           <label for="esPrincipal" class="col-sm-4 col-form-label">Es Principal?</label>
           <div class="col-sm-8">
-            <select class="form-control" id="esPrincipal" name="esPrincipal" [(ngModel)]="entidadSeleccionada.esprincipal">
+            <select class="form-control" id="esPrincipal" name="esPrincipal" [(ngModel)]="entidadSeleccionada.esprincipal" >
               <option value="-1" selected>Seleccione...</option>
               <option value="1" selected>Si</option>
               <option value="0" selected>No</option>
@@ -157,7 +152,7 @@
         <div class="form-group row">
           <label for="idFoto" class="col-sm-4 col-form-label">Imagen</label>
           <div class="col-sm-8">
-            <input type="file" class="form-control" id="imagen" placeholder="Imagen" #fileInput (change)="CodificarArchivo($event)" accept="image/*">
+            <input type="file" id="imagen" placeholder="Imagen" #fileInput (change)="CodificarArchivo($event)" accept="image/*">
           </div>
         </div>
         <div class="form-group row">
