--- a/client/src/app/CRUD/imagen/imagen.component.html
+++ b/client/src/app/CRUD/imagen/imagen.component.html
@@ -1,149 +1,139 @@
 <div class="container">
-   <div class="row">
-      <div class="col-md-12 text-right">
-         <h2 style="margin-top:0px">Catálogo de Imagen</h2>
+  <div class="row">
+    <div class="col-md-12 text-right">
+      <h2 style="margin-top:0px">Catálogo de Imagen</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="btn-toolbar">
+        <div>
+          <button type="button" class="btn btn-default" (click)="refresh()">
+            <span class="fa fa-refresh"></span>&nbsp;Leer
+          </button>
+          <button type="button" class="btn btn-success" (click)="open(content,false)" [ngClass]='{disabled: entidadSeleccionada.id === 0}'>
+            <span class="fa fa-edit"></span>&nbsp;Editar
+          </button>
+          <button type="button" class="btn btn-info" (click)="open(content,true)">
+            <span class="fa fa-plus"></span>&nbsp;Nuevo
+          </button>
+          <button type="button" class="btn btn-danger" (click)="delete(entidadSeleccionada); $event.stopPropagation();" [ngClass]='{disabled: entidadSeleccionada.id === 0}'>
+            <span class="fa fa-remove"></span>&nbsp;Borrar
+          </button>
+        </div>
       </div>
-   </div>
-   <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-         <div class="btn-toolbar">
-            <div>
-               <button type="button" class="btn btn-default" (click)="refresh()">
-                  <span class="fa fa-refresh"></span>&nbsp;Leer
-               </button>
-               <button type="button" class="btn btn-success" (click)="open(content,false)" [ngClass]='{disabled: entidadSeleccionada.id === 0}'>
-                  <span class="fa fa-edit"></span>&nbsp;Editar
-               </button>
-               <button type="button" class="btn btn-info" (click)="open(content,true)">
-                  <span class="fa fa-plus"></span>&nbsp;Nuevo
-               </button>
-               <button type="button" class="btn btn-danger" (click)="delete(entidadSeleccionada); $event.stopPropagation();" [ngClass]='{disabled: entidadSeleccionada.id === 0}'>
-                  <span class="fa fa-remove"></span>&nbsp;Borrar
-               </button>
-            </div>
-         </div>
-      </div>
-   </div>
-   <div class="row" style="margin-top:15px">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-         <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-               <tr>
-                  <th>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Identificador</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Persona</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Tipo de Archivo</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Nombre del Archivo</strong>
-                     </span>
-                  </th>
-                  <th scope="col">
-                     <span>
-                        <strong>Adjunto</strong>
-                     </span>
-                  </th>
-               </tr>
-            </thead>
-            <tbody>
-               <tr *ngFor="let actual of entidades" (click)="onSelect(actual)">
-                  <td>
-                     <i class="fa fa-hand-o-right" [hidden]="!estaSeleccionado(actual)"></i>
-                  </td>
-                  <td>{{actual.id}}</td>
-                  <td>{{actual.idPersona}}</td>
-                  <td>{{actual.tipoArchivo}}</td>
-                  <td>{{actual.nombreArchivo}}</td>
-                  <td>{{actual.adjunto}}</td>
-               </tr>
-            </tbody>
-         </table>
-         <div class="col-md-12">
-            <div class="btn-toolbar">
-               <div>
-                  <button type="button" class="btn btn-default" (click)="getPaginaPrimera()">
-                     <span class="fa fa-fast-backward"></span>
-                  </button>
-                  <button type="button" class="btn btn-default" (click)="getPaginaAnterior()">
-                     <span class="fa fa-step-backward"></span>
-                  </button>
-                  <span><strong style="margin:10px;">Página</strong><strong id="paginaActual">{{paginaActual}}</strong><strong style="margin:10px;">de</strong><strong id="paginaUltima" style="margin-right:10px;">{{paginaUltima}}</strong></span>
-                  <button type="button" class="btn btn-default" (click)="getPaginaSiguiente()">
-                     <span class="fa fa-step-forward"></span>
-                  </button>
-                  <button type="button" class="btn btn-default" (click)="getPaginaUltima()">
-                     <span class="fa fa-fast-forward"></span>
-                  </button>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-   <ng-template #content let-c="close" let-d="dismiss">
-      <div class="modal-header">
-         <h4 class="modal-title">
-            <span *ngIf="entidadSeleccionada.id != 0">
-               Edición de Datos: {{entidadSeleccionada.descripcion | uppercase}}
+    </div>
+  </div>
+  <div class="row" style="margin-top:15px">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <table class="table table-striped table-bordered">
+        <thead class="thead-dark">
+          <tr>
+            <th>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Identificador</strong>
+              </span>
+            </th>
+
+            <th scope="col">
+              <span>
+                <strong>Tipo de Archivo</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Nombre del Archivo</strong>
+              </span>
+            </th>
+            <th scope="col">
+              <span>
+                <strong>Adjunto</strong>
+              </span>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let actual of entidades" (click)="onSelect(actual)">
+            <td>
+              <i class="fa fa-hand-o-right" [hidden]="!estaSeleccionado(actual)"></i>
+            </td>
+            <td>{{actual.id}}</td>
+            <td>{{actual.tipoArchivo}}</td>
+            <td>{{actual.nombreArchivo}}</td>
+            <td>{{actual.adjunto}}</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="col-md-12">
+        <div class="btn-toolbar">
+          <div>
+            <button type="button" class="btn btn-default" (click)="getPaginaPrimera()">
+              <span class="fa fa-fast-backward"></span>
+            </button>
+            <button type="button" class="btn btn-default" (click)="getPaginaAnterior()">
+              <span class="fa fa-step-backward"></span>
+            </button>
+            <span>
+              <strong style="margin:10px;">Página</strong>
+              <strong id="paginaActual">{{paginaActual}}</strong>
+              <strong style="margin:10px;">de</strong>
+              <strong id="paginaUltima" style="margin-right:10px;">{{paginaUltima}}</strong>
             </span>
-            <span *ngIf="entidadSeleccionada.id === 0">
-               Ingreso de Datos:
-            </span>
-         </h4>
-         <button type="button" class="close" aria-label="Close" (click)="d('ClickEnX')">
-            <span aria-hidden="true">&times;</span>
-         </button>
-      </div>
-      <div class="modal-body">
-         <form>
-         
-         <div class="form-group row">
-            <label for="idUsuario" class="col-sm-4 col-form-label">Usuario</label>
-            <div class="col-sm-8">
-              <select class="form-control" id="idUsusario" name="idUsuario" [(ngModel)]="entidadSeleccionada.idUsuario">
-                <option value="" selected>Seleccione...</option>
-                <option *ngFor="let usuario of usuarios" value={{usuario.id}}>{{usuario.nombreCompleto}}</option>
-              </select>
-            </div>
-         </div>
-         <div class="form-group row">
-            <label for="tipoArchivo" class="col-sm-4 col-form-label">Tipo de Archivo</label>
-            <div class="col-sm-8">
-            <input type="text" class="form-control" id="tipoArchivo" name="tipoArchivo" placeholder="Tipo de Archivo" [(ngModel)]="entidadSeleccionada.tipoArchivo">
-            
+            <button type="button" class="btn btn-default" (click)="getPaginaSiguiente()">
+              <span class="fa fa-step-forward"></span>
+            </button>
+            <button type="button" class="btn btn-default" (click)="getPaginaUltima()">
+              <span class="fa fa-fast-forward"></span>
+            </button>
           </div>
-         </div>
-         <div class="form-group row">
-            <label for="nombreArchivo" class="col-sm-4 col-form-label">Nombre de Archivo</label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="nombreArchivo" name="nombreArchivo" placeholder="Nombre de Archivo" [(ngModel)]="entidadSeleccionada.nombreArchivo">
-            </div>
-         </div>
-         <div class="form-group row">
-            <label for="adjunto" class="col-sm-4 col-form-label">Adjunto</label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="adjunto" name="adjunto" placeholder="Adjunto" [(ngModel)]="entidadSeleccionada.adjunto">
-            </div>
-         </div>
-         </form>
+        </div>
       </div>
-      <div class="modal-footer">
-         <button type="button" class="btn btn-primary col-offset-sm-4" (click)="c('save')">
-            <span class="fa fa-save"></span>&nbsp;Guardar
-         </button>
-         <button type="button" class="btn btn-default" (click)="c('close')">Cerrar</button>
-      </div>
-   </ng-template>
+    </div>
+  </div>
+  <ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+      <h4 class="modal-title">
+        <span *ngIf="entidadSeleccionada.id != 0">
+          Edición de Datos: {{entidadSeleccionada.descripcion | uppercase}}
+        </span>
+        <span *ngIf="entidadSeleccionada.id === 0">
+          Ingreso de Datos:
+        </span>
+      </h4>
+      <button type="button" class="close" aria-label="Close" (click)="d('ClickEnX')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="form-group row">
+          <label for="tipoArchivo" class="col-sm-4 col-form-label">Tipo de Archivo</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="tipoArchivo" name="tipoArchivo" placeholder="Tipo de Archivo" [(ngModel)]="entidadSeleccionada.tipoArchivo">
+
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="nombreArchivo" class="col-sm-4 col-form-label">Nombre de Archivo</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="nombreArchivo" name="nombreArchivo" placeholder="Nombre de Archivo" [(ngModel)]="entidadSeleccionada.nombreArchivo">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="adjunto" class="col-sm-4 col-form-label">Adjunto</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="adjunto" name="adjunto" placeholder="Adjunto" [(ngModel)]="entidadSeleccionada.adjunto">
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-primary col-offset-sm-4" (click)="c('save')">
+        <span class="fa fa-save"></span>&nbsp;Guardar
+      </button>
+      <button type="button" class="btn btn-default" (click)="c('close')">Cerrar</button>
+    </div>
+  </ng-template>
 </div>
