--- a/client/src/app/CRUD/noticia/noticia.component.html
+++ b/client/src/app/CRUD/noticia/noticia.component.html
@@ -130,7 +130,8 @@
         <div class="form-group row">
           <label for="titulo" class="col-sm-4 col-form-label">Titulo</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="titulo" name="titulo" placeholder="Título" [(ngModel)]="entidadSeleccionada.titulo">
+            <input type="text"  class="form-control" id="titulo" name="titulo"
+            [(ngModel)]="entidadSeleccionada.titulo">
           </div>
         </div>
         <div class="form-group row">
