--- a/client/src/app/layout/analisis/analisis.component.html
+++ b/client/src/app/layout/analisis/analisis.component.html
@@ -46,7 +46,7 @@
                             <div class="card alert alert-secondary bg-light border-dark">
                                 <img class="card-img-top" src="..." alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Contenido</h5>
                                 </div>
                                 <div class="card-footer alert alert-secondary bg-light border-dark">
                                     <small class="text-muted">Last updated 3 mins ago</small>
