--- a/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
+++ b/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
@@ -107,18 +107,26 @@
     </div>
     <div class="modal-body">
       <form>
-        
+
         <div class="form-group row">
           <label for="prioridad" class="col-sm-4 col-form-label">Prioridad</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="prioridad" name="prioridad" placeholder="Prioridad" [(ngModel)]="entidadSeleccionada.prioridad">
-          </div>
+              <select class="form-control" id="prioridad" name="prioridad" [(ngModel)]="entidadSeleccionada.prioridad" >
+                <option value="-1" selected>Seleccione...</option>
+                <option value="1" selected>Alta</option>
+                <option value="2" selected>Media</option>
+                <option value="3" selected>Baja</option>
+              </select>
+            </div>
         </div>
         <div class="form-group row">
           <label for="idLink" class="col-sm-4 col-form-label">Link</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="idLink" name="idLink" placeholder="Link" [(ngModel)]="entidadSeleccionada.idLink">
-          </div>
+            <select class="form-control" id="idLink" name="idLink" [(ngModel)]="entidadSeleccionada.idLink">
+                <option value="" selected>Seleccione...</option>
+                <option *ngFor="let link of entidadesAsignacionLinkDLink" value={{link.id}}>{{link.descripcion}}</option>
+              </select>
+        </div>
         </div>
         <div class="form-group row">
           <label for="idPagina" class="col-sm-4 col-form-label">Página</label>
