--- a/client/src/app/CRUD/imagen/imagen.component.html
+++ b/client/src/app/CRUD/imagen/imagen.component.html
@@ -109,13 +109,6 @@
     <div class="modal-body">
       <form>
         <div class="form-group row">
-          <label for="tipoArchivo" class="col-sm-4 col-form-label">Tipo de Archivo</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="tipoArchivo" name="tipoArchivo" placeholder="Tipo de Archivo" [(ngModel)]="entidadSeleccionada.tipoArchivo">
-
-          </div>
-        </div>
-        <div class="form-group row">
           <label for="nombreArchivo" class="col-sm-4 col-form-label">Nombre de Archivo</label>
           <div class="col-sm-8">
             <input type="text" class="form-control" id="nombreArchivo" name="nombreArchivo" placeholder="Nombre de Archivo" [(ngModel)]="entidadSeleccionada.nombreArchivo">
@@ -124,7 +117,7 @@
         <div class="form-group row">
           <label for="adjunto" class="col-sm-4 col-form-label">Adjunto</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="adjunto" name="adjunto" placeholder="Adjunto" [(ngModel)]="entidadSeleccionada.adjunto">
+            <input type="file" id="imagen" #fileInput (change)="CodificarArchivo($event)" accept="image/*">
           </div>
         </div>
       </form>
