--- a/client/src/app/CRUD/pagina/pagina.component.html
+++ b/client/src/app/CRUD/pagina/pagina.component.html
@@ -43,7 +43,7 @@
             </th>
             <th scope="col">
               <span>
-                <strong>Slider</strong>
+                <strong>Titulo</strong>
               </span>
             </th>
             <th scope="col">
@@ -128,9 +128,9 @@
       <form>
        
         <div class="form-group row">
-          <label for="slider" class="col-sm-4 col-form-label">Slider</label>
+          <label for="slider" class="col-sm-4 col-form-label">Titulo</label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="slider" name="slider" placeholder="Slider" [(ngModel)]="entidadSeleccionada.slider">
+            <input type="text" class="form-control" id="slider" name="slider" placeholder="Titulo" [(ngModel)]="entidadSeleccionada.slider">
           </div>
         </div>
         <div class="form-group row">
