--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -41,46 +41,39 @@
     <hr>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-cogs'" [label]="'Análisis de sistemas'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" (click)="enviarPaginaSecundaria(1)" [routerLink]="['/pagina-secundaria']">Ver Carrera</a>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-cogs'" [label]="'Análisis de sistemas'"  (click)="enviarPaginaSecundaria(1)"
+                [routerLink]="['/pagina-secundaria']"></app-stat>
+
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-cutlery'" [label]="'Arte Culinario'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" (click)="enviarPaginaSecundaria(2)" [routerLink]="['/pagina-secundaria']">Ver Carrera</a>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-cutlery'" [label]="'Arte Culinario'" (click)="enviarPaginaSecundaria(2)" [routerLink]="['/pagina-secundaria']"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-scissors'" [label]="'Diseño de Modas'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" (click)="enviarPaginaSecundaria(3)" [routerLink]="['/pagina-secundaria']">Ver Carrera</a>
-        </div>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-scissors'" [label]="'Diseño de Modas'"(click)="enviarPaginaSecundaria(3)" [routerLink]="['/pagina-secundaria']"></app-stat>
+                    </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-floppy-o'" [label]="'Desarrollo de Software'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" (click)="enviarPaginaSecundaria(4)" [routerLink]="['/pagina-secundaria']">Ver Carrera</a>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-floppy-o'" [label]="'Desarrollo de Software'" (click)="enviarPaginaSecundaria(4)" [routerLink]="['/pagina-secundaria']"></app-stat>
         </div>
     </div>
     <br>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-bolt'" [label]="'Electricidad'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" (click)="enviarPaginaSecundaria(5)" [routerLink]="['/pagina-secundaria']">Ver Carrera</a>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-bolt'" [label]="'Electricidad'" (click)="enviarPaginaSecundaria(5)" [routerLink]="['/pagina-secundaria']"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-microchip'" [label]="'Electronica'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" (click)="enviarPaginaSecundaria(6)" [routerLink]="['/pagina-secundaria']">Ver Carrera</a>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-microchip'" [label]="'Electronica'" (click)="enviarPaginaSecundaria(6)" [routerLink]="['/pagina-secundaria']"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-street-view'" [label]="'Guianza Turistica'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" (click)="enviarPaginaSecundaria(7)" [routerLink]="['/pagina-secundaria']">Ver Carrera</a>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-street-view'" [label]="'Guianza Turistica'" (click)="enviarPaginaSecundaria(7)" [routerLink]="['/pagina-secundaria']"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-pie-chart'" [label]="'Marketing'"></app-stat>
-            <a type="button" class="btn btn-outline-primary btn-lg col-xl-12" (click)="enviarPaginaSecundaria(8)" [routerLink]="['/pagina-secundaria']">Ver Carrera</a>
+            <app-stat [bgClass]="'light'" [bordClass]="'primary'" [icon]="'fa fa-pie-chart'" [label]="'Marketing'" (click)="enviarPaginaSecundaria(8)" [routerLink]="['/pagina-secundaria']"></app-stat>
         </div>
     </div>
     <hr />
-    <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" class="btn"
-    *ngFor="let alert of alerts" (click)="enviarNoticia(alert.id)"
-    [routerLink]="['/noticias']">
-    {{ alert.message }}
+    <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" class="btn" *ngFor="let alert of alerts" (click)="enviarNoticia(alert.id)"
+        [routerLink]="['/noticia']">
+        {{ alert.message }}
     </ngb-alert>
     <hr />
     <div class="row">
