--- a/client/src/app/layout/pagina-secundaria/pagina-secundaria.component.html
+++ b/client/src/app/layout/pagina-secundaria/pagina-secundaria.component.html
@@ -3,16 +3,16 @@
         <div class="container">
             <div class="col-12">
                 <div class="alert alert-primary" role="alert" align="CENTER">
-                    <H1>{{actual.descripcion}}</H1>
+                    <H1>{{actual.slider}}</H1>
                 </div>
                 <div class="card-body">
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
                                 <div class="col-12 alert alert-secondary bg-light border-dark">
-                                    <H1>PAGINA SECUNDARIA</H1>
-                                    <img src="{{srcImagen}}" alt="nada" width='450px'>
-                                    <h6>{{actual.texto}}</h6>-->
+                                    <h4>{{actual.texto}}</h4>
+                                    <img src="{{srcImagen}}" alt="Imagen" width='450px'>
+                                    <h6>{{actual.descripcion}}</h6>
                                 </div>
                             </div>
                         </div>
